--- a/docs/backend-requests/overview.mdx
+++ b/docs/backend-requests/overview.mdx
@@ -15,7 +15,9 @@ In order to authenticate the user on the backend using the Clerk SDK, the short-
 
 ## Frontend requests
 
-To make authenticated requests from the frontend, the approach differs based on whether your client and server are on the same origin. The origin includes the protocol, hostname, and port (optional):
+To make authenticated requests from the frontend, the approach differs based on whether your client and server are on the same origin. 
+
+The origin includes the protocol, hostname, and port (optional):
 
 `<protocol>//<hostname>[:<port>]`
 
