--- a/docs/backend-requests/overview.mdx
+++ b/docs/backend-requests/overview.mdx
@@ -23,11 +23,11 @@ The origin includes the protocol, hostname, and port (optional):
 
 ### Same-origin
 
-For same-origin requests, refer to our guide on making same-origin requests.
+For same-origin requests, refer to our guide on [making same-origin requests](/docs/backend-requests/making/same-origin).
 
 ### Cross-origin
 
-For cross-origin requests, refer to our guide on making cross-origin requests.
+For cross-origin requests, refer to our guide on [making cross-origin requests](/docs/backend-requests/making/cross-origin).
 
 ## Backend requests
 
