update comment to include TODO

--- a/docs/organizations/viewing-memberships.mdx
+++ b/docs/organizations/viewing-memberships.mdx
@@ -9,7 +9,10 @@ Clerk provides the ability for the currently signed-in user to view all the orga
 
 In React and Next.js applications, the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook can be used to return the list of invitations or memberships for the currently active user. In JavaScript applications, the [`getOrganizationMemberships()`](/docs/references/javascript/clerk/organization-methods#get-organization-memberships) method is used to retrieve the list of organizations the current user is a part of and can be accessed through the [`Clerk` object](/docs/references/javascript/clerk/clerk).
 
-{/* Instead of viewing the current users memberships, you can also view all of the memberships for an organization.
+{/* TODO (DOCS-316): Add a section about viewing all memberships for an organization.
+
+In addition to viewing the current users memberships, you can also view all of the memberships for an organization.
+
 You can use the `getOrganizationMembershipList()` method to retrieve a list of memberships for an organization by passing in an organization ID. This method can be accessed through the [Backend API](/docs/references/backend/organization/get-organization-membership-list). */}
 
 ## Usage
