--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -45,9 +45,9 @@ CLERK_SECRET_KEY={{secret}}
 Add the [`<ClerkProvider />`](/docs/components/clerk-provider#clerk-provider) wrapper to your application. The `<ClerkProvider />` component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. A reasonable default approach is to have `<ClerkProvider />` wrap the `<body/>` to enable the context to be accessible anywhere within the app.
 
 <Callout type="info">
-  The `<ClerkProvider />` component needs to access [headers](https://nextjs.org/docs/app/api-reference/functions/headers) to authenticate correctly. This means anything wrapped by the provider will be opted into [dynamic rendering](https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-rendering) at request time. If you have static-optimized or ISR pages that you would prefer not to be opted into dynamic rendering, make sure they are <em>not</em> wrapped by `<ClerkProvider />`.
+  <p>The `<ClerkProvider />` component needs to access [headers](https://nextjs.org/docs/app/api-reference/functions/headers) to authenticate correctly. This means anything wrapped by the provider will be opted into [dynamic rendering](https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-rendering) at request time. If you have static-optimized or ISR pages that you would prefer not to be opted into dynamic rendering, make sure they are <em>not</em> wrapped by `<ClerkProvider />`.</p>
   
-  This is easiest to accomplish by ensuring that `<ClerkProvider />` is added further down the tree to wrap page groups that explicitly need authentication instead of having the provider wrap your application root as recommended above. For example, if you have a set of landing/marketing pages, and an app that requires login that live within the same project, wrapping just the app layout group with the provider and keeping the marketing pages in a separate layout group would allow the marketing pages to continue to be static-optimized.
+  <p>This is easiest to accomplish by ensuring that `<ClerkProvider />` is added further down the tree to wrap page groups that explicitly need authentication instead of having the provider wrap your application root as recommended above. For example, if you have a set of landing/marketing pages, and an app that requires login that live within the same project, wrapping just the app layout group with the provider and keeping the marketing pages in a separate layout group would allow the marketing pages to continue to be static-optimized.</p>
 </Callout>
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
